--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -7,7 +7,8 @@ jobs:
     - name: checkout repo
       uses: actions/checkout@v4
     - name: welcome message
-      run: echo "Welcome to GitHub Actions"
+      run: |
+           echo "Welcome to GitHub Actions"
            ls -ltr
            cat README.md
            
