--- a/.github/workflows/generate-ascii.yml
+++ b/.github/workflows/generate-ascii.yml
@@ -11,16 +11,7 @@ jobs:
            echo "Welcome to GitHub Actions"
            ls -ltr
            cat README.md
-    - name: Installing cowsay package
-      run: sudo apt-get -y install cowsay
+    - name: Executing Script
+      run: ./script.sh
       
-    - name: Adding Third Party Libraries
-      run: cowsay -f dragon "Run for cover, I am a DRAGON....RAWR" >> dragon.txt
-
-    - name: Dragon file exists or not
-      run: ls -ltr | grep dragon.txt
-
-    - name: Read file
-      run: cat dragon.txt
-    - name: Checkout Repo Files
-      run: ls -ltr
+    
