--- a/.github/workflows/generate-ascii.yml
+++ b/.github/workflows/generate-ascii.yml
@@ -12,6 +12,8 @@ jobs:
            ls -ltr
            cat README.md
     - name: Executing Script
-      run: .github/workflows/script.sh
+      run: |
+          chmod +x script.sh
+          .github/workflows/script.sh
       
     
